Exercise 7 Section 5 is finished, all that is missing is to do the tests in Section 5.